added the iphone display images

--- a/public/global.css
+++ b/public/global.css
@@ -101,16 +101,19 @@ a:link {
 
 /****************************************  Globals *********************************** */
 .global-wrapper {
-  height: 100vh;
+  height: 98vh;
   width: 100vw;
-  position: relative;
+  top: 0;
+  left: 0;
+  position: fixed;
   overflow: hidden;
 }
 
 .main-wrapper {
   width: var(--main-wrapper);
   max-width: var(--max-width-main-wrapper);
-  margin: 0 auto;
+  height: 100%;
+  margin: auto;
 }
 
 /* ------------------Icons                                                       */
